--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,10 +15,13 @@ permissions:
 env:
   REGISTRY_IMAGE: ghcr.io/${{ github.repository }}
   BAKE_TARGET: build
+  DOCKERHUB_USERNAME: ${{ github.actor }}
+  RUNNER_ARM64: ubuntu-22.04-arm
+  RUNNER_DEFAULT: ubuntu-22.04
 
 jobs:
   prepare:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ env.RUNNER_DEFAULT }}
     outputs:
       matrix: ${{ steps.platforms.outputs.matrix }}
     steps:
@@ -53,7 +56,7 @@ jobs:
           retention-days: 1
 
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.platform == 'linux/arm64' && env.RUNNER_ARM64 || env.RUNNER_DEFAULT }}
     needs:
       - prepare
     strategy:
@@ -76,7 +79,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN  }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -112,7 +115,7 @@ jobs:
           retention-days: 1
 
   merge:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ env.RUNNER_DEFAULT }}
     needs:
       - build
     steps:
@@ -133,7 +136,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN  }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
