--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,7 +21,7 @@ env:
 
 jobs:
   prepare:
-    runs-on: ${{ env.RUNNER_DEFAULT }}
+    runs-on: ubuntu-22.04
     outputs:
       matrix: ${{ steps.platforms.outputs.matrix }}
     steps:
@@ -56,7 +56,7 @@ jobs:
           retention-days: 1
 
   build:
-    runs-on: ${{ matrix.platform == 'linux/arm64' && env.RUNNER_ARM64 || env.RUNNER_DEFAULT }}
+    runs-on: ${{ matrix.platform == 'linux/arm64' && 'ubuntu-22.04-arm' || 'ubuntu-22.04' }}
     needs:
       - prepare
     strategy:
@@ -115,7 +115,7 @@ jobs:
           retention-days: 1
 
   merge:
-    runs-on: ${{ env.RUNNER_DEFAULT }}
+    runs-on: ubuntu-22.04
     needs:
       - build
     steps:
