--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,6 +18,7 @@ env:
   DOCKERHUB_USERNAME: ${{ github.actor }}
   RUNNER_ARM64: ubuntu-22.04-arm
   RUNNER_DEFAULT: ubuntu-22.04
+  registry: ghcr.io
 
 jobs:
   prepare:
@@ -78,6 +79,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: ${{ env.REGISTRY_IMAGE }}
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.GITHUB_TOKEN  }}
 
@@ -135,6 +137,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
+          registry: ${{ env.REGISTRY_IMAGE }}
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.GITHUB_TOKEN  }}
 
