--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,12 +13,13 @@ permissions:
   packages: write
 
 env:
-  REGISTRY_IMAGE: ghcr.io/${{ github.repository }}
+  # REGISTRY_IMAGE: ghcr.io/${{ github.repository }}
+  REGISTRY_IMAGE: ''
   BAKE_TARGET: build
   DOCKERHUB_USERNAME: ${{ github.actor }}
   RUNNER_ARM64: ubuntu-22.04-arm
   RUNNER_DEFAULT: ubuntu-22.04
-  registry: ghcr.io
+  REGISTRY: ghcr.io
 
 jobs:
   prepare:
@@ -32,7 +33,14 @@ jobs:
       - name: Create matrix
         id: platforms
         run: |
-          echo "matrix=$(docker buildx bake ${{ env.BAKE_TARGET }} --print | jq -cr '.target."${{ env.BAKE_TARGET }}".platforms')" >>${GITHUB_OUTPUT}
+          echo "matrix=$(docker buildx bake ${{ env.BAKE_TARGET }} --print | jq -cr '
+            .target
+            | to_entries
+            | map({
+                image: .key,
+                platforms: .value.platforms
+              })
+          ')" >> $GITHUB_OUTPUT
 
       - name: Show matrix
         run: |
@@ -79,7 +87,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY_IMAGE }}
+          registry: ${{ env.REGISTRY }}
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.GITHUB_TOKEN  }}
 
@@ -137,7 +145,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY_IMAGE }}
+          registry: ${{ env.REGISTRY }}
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.GITHUB_TOKEN  }}
 
