--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -34,17 +34,8 @@ jobs:
         id: platforms
         run: |
           echo "matrix=$(docker buildx bake ${{ env.BAKE_TARGET }} --print | jq -cr '
-            .target as $targets |
-            [
-              $targets | to_entries[] |
-              . as $t |
-              $t.value.platforms[] |
-              {
-                ( ($t.key + "-" + (. | gsub("/"; "-"))) ): {
-                  image: $t.key,
-                  platform: .
-                }
-              }
+            [ .target | to_entries[] as $t | $t.value.platforms[] |
+              { "\($t.key)-\(gsub("/"; "-"))": { image: $t.key, platform: . } }
             ] | add
           ')" >> $GITHUB_OUTPUT
 
@@ -71,16 +62,17 @@ jobs:
           retention-days: 1
 
   build:
-    runs-on: ${{ matrix.platform == 'linux/arm64' && 'ubuntu-22.04-arm' || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.image-platform.platform == 'linux/arm64' && 'ubuntu-22.04-arm' || 'ubuntu-22.04' }}
     needs:
       - prepare
     strategy:
       fail-fast: false
-      matrix: ${{ fromJson(needs.prepare.outputs.matrix) }}
+      matrix:
+        image-platform: ${{ fromJson(needs.prepare.outputs.matrix) }}
     steps:
       - name: Prepare
         run: |
-          platform=${{ matrix.platform }}
+          platform=${{ matrix.image-platform.platform }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
 
       - name: Download meta bake definition
@@ -112,7 +104,7 @@ jobs:
           targets: ${{ env.BAKE_TARGET }}
           set: |
             *.tags=${{ env.REGISTRY_IMAGE }}
-            *.platform=${{ matrix.platform }}
+            *.platform=${{ matrix.image-platform.platform }}
             *.output=type=image,push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
