--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -62,17 +62,17 @@ jobs:
           retention-days: 1
 
   build:
-    runs-on: ${{ matrix.image-platform.platform == 'linux/arm64' && 'ubuntu-22.04-arm' || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.imageplatform.platform == 'linux/arm64' && 'ubuntu-22.04-arm' || 'ubuntu-22.04' }}
     needs:
       - prepare
     strategy:
       fail-fast: false
       matrix:
-        image-platform: ${{ fromJson(needs.prepare.outputs.matrix) }}
+        imageplatform: ${{ fromJson(needs.prepare.outputs.matrix) }}
     steps:
       - name: Prepare
         run: |
-          platform=${{ matrix.image-platform.platform }}
+          platform=${{ matrix.imageplatform.platform }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
 
       - name: Download meta bake definition
@@ -104,7 +104,7 @@ jobs:
           targets: ${{ env.BAKE_TARGET }}
           set: |
             *.tags=${{ env.REGISTRY_IMAGE }}
-            *.platform=${{ matrix.image-platform.platform }}
+            *.platform=${{ matrix.imageplatform.platform }}
             *.output=type=image,push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
