--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -93,6 +93,8 @@ jobs:
       - name: Build
         id: bake
         uses: docker/bake-action@v6
+        env:
+          NO_TAG: true
         with:
           files: |
             ./docker-bake.hcl
