--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -77,6 +77,10 @@ jobs:
           name: bake-meta
           path: ${{ runner.temp }}
 
+      - name: Do not use tags in bake meta for this step
+        run: |
+          jq '.target |= with_entries(.value.tags |= map(sub(":.*$"; "")))' < ${{ runner.temp }}/bake-meta.json > ${{ runner.temp }}/bake-meta.json
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -93,8 +97,6 @@ jobs:
       - name: Build
         id: bake
         uses: docker/bake-action@v6
-        env:
-          NO_TAG: true
         with:
           files: |
             ./docker-bake.hcl
