--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -79,7 +79,7 @@ jobs:
 
       - name: Do not use tags in bake meta for this step
         run: |
-          jq '.target |= with_entries(.value.tags |= map(sub(":.*$"; "")))' < ${{ runner.temp }}/bake-meta.json > ${{ runner.temp }}/bake-meta.json
+          jq '.target |= with_entries(.value.tags |= map(sub(":.*$"; "")))' < ${{ runner.temp }}/bake-meta.json > ${{ runner.temp }}/bake-meta-no-tag.json
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -100,7 +100,7 @@ jobs:
         with:
           files: |
             ./docker-bake.hcl
-            cwd://${{ runner.temp }}/bake-meta.json
+            cwd://${{ runner.temp }}/bake-meta-no-tag.json
           targets: ${{ env.BAKE_TARGET }}
           set: |
             ${{ env.REGISTRY_IMAGE != '' && format('*.tags={0}', env.REGISTRY_IMAGE) || '' }}
