--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -77,11 +77,6 @@ jobs:
           name: bake-meta
           path: ${{ runner.temp }}
 
-      - name: Do not use tags in bake meta for this step
-        run: |
-          jq 'del(.target."docker-metadata-action".tags)' ${{ runner.temp }}/bake-meta.json > ${{ runner.temp }}/bake-meta-no-tag.json
-          cat ${{ runner.temp }}/bake-meta-no-tag.json
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -98,10 +93,12 @@ jobs:
       - name: Build
         id: bake
         uses: docker/bake-action@v6
+        env:
+          NO_TAG: true
         with:
           files: |
             ./docker-bake.hcl
-            cwd://${{ runner.temp }}/bake-meta-no-tag.json
+            cwd://${{ runner.temp }}/bake-meta.json
           targets: ${{ env.BAKE_TARGET }}
           set: |
             ${{ env.REGISTRY_IMAGE != '' && format('*.tags={0}', env.REGISTRY_IMAGE) || '' }}
