--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -150,10 +150,11 @@ jobs:
         working-directory: ${{ runner.temp }}/digests
         run: |
           jq -s 'add' ${{ runner.temp }}/digests/*.json > ${{ runner.temp }}/all.json
+          cat ${{ runner.temp }}/all.json
           JSON_FILE=${{ runner.temp }}/all.json
           for key in $(jq -r 'keys[]' "$JSON_FILE"); do
             image_name=$(jq -r ".\"$key\".name" "$JSON_FILE")
-            done
+            echo "Creating manifest for image: $image_name"
             docker buildx imagetools create \
               $(jq -cr '.target."docker-metadata-action".tags | map(select(startswith("${image_name}")) | "-t " + .) | join(" ")' ${{ runner.temp }}/bake-meta.json) \
               $(jq -r ".\"$key\".digests[]" "$JSON_FILE" | while read -r digest; do echo "${image_name}@${digest} "; done)
