--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -165,11 +165,13 @@ jobs:
           JSON_FILE=${{ runner.temp }}/digests/all.json
           for key in $(jq -r 'keys[]' "$JSON_FILE"); do
             image_name=$(jq -r ".\"$key\".name" "$JSON_FILE")
+            image_digests=$(jq -r ".\"$key\".digests[]" "$JSON_FILE" | while read -r digest; do echo "${image_name}@${digest} "; done)
+            image_tags=$(jq -cr '(.target."docker-metadata-action".tags // [] ) | map("-t " + sub(".*:"; "")) | join(" ")' ${{ runner.temp }}/bake-meta.json)
             echo "Creating manifest for image: $image_name"
             echo "Tags: $(jq -cr '.target."docker-metadata-action".tags | map(select(startswith("${image_name}")) | "-t " + .) | join(" ")' ${{ runner.temp }}/bake-meta.json)"
             docker buildx imagetools create \
-              $(jq -cr '.target."docker-metadata-action".tags | map(select(startswith("${image_name}")) | "-t " + .) | join(" ")' ${{ runner.temp }}/bake-meta.json) \
-              $(jq -r ".\"$key\".digests[]" "$JSON_FILE" | while read -r digest; do echo "${image_name}@${digest} "; done)
+              ${image_tags} \
+              ${image_digests}
           done
 
       - name: Inspect image
