--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -166,7 +166,7 @@ jobs:
           for key in $(jq -r 'keys[]' "$JSON_FILE"); do
             image_name=$(jq -r ".\"$key\".name" "$JSON_FILE")
             image_digests=$(jq -r ".\"$key\".digests[]" "$JSON_FILE" | while read -r digest; do echo "${image_name}@${digest} "; done)
-            image_tags=$(jq -cr '(.target."docker-metadata-action".tags // [] ) | map("-t " + sub(".*:"; "")) | join(" ")' ${{ runner.temp }}/bake-meta.json)
+            image_tags=$(jq -cr '(.target."docker-metadata-action".tags // [] ) | map("-t " + sub(".*:"; "${image_name}:")) | join(" ")' ${{ runner.temp }}/bake-meta.json)
             echo "Creating manifest for image: $image_name"
             echo "Tags: $(jq -cr '.target."docker-metadata-action".tags | map(select(startswith("${image_name}")) | "-t " + .) | join(" ")' ${{ runner.temp }}/bake-meta.json)"
             docker buildx imagetools create \
@@ -175,5 +175,10 @@ jobs:
           done
 
       - name: Inspect image
+        working-directory: ${{ runner.temp }}/digests
         run: |
-          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:$(jq -r '.target."docker-metadata-action".args.DOCKER_META_VERSION' ${{ runner.temp }}/bake-meta.json)
+          JSON_FILE=${{ runner.temp }}/digests/all.json
+          for key in $(jq -r 'keys[]' "$JSON_FILE"); do
+            image_name=$(jq -r ".\"$key\".name" "$JSON_FILE")
+            docker buildx imagetools inspect ${image_name}:$(jq -r '.target."docker-metadata-action".args.DOCKER_META_VERSION' ${{ runner.temp }}/bake-meta.json)
+          done
