--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -9,14 +9,14 @@ on:
     inputs:
       registry-image:
         description: 'Container registry + image prefix (e.g. ghcr.io/org/repo)'
-        required: true
+        required: false
         type: string
       bake-target:
         description: 'Target name for `docker buildx bake`'
         required: false
         type: string
         default: 'build'
-      dockerhub-username:
+      registry-username:
         description: 'Username for registry login'
         required: true
         type: string
@@ -103,7 +103,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ inputs.registry }}
-          username: ${{ inputs.dockerhub-username }}
+          username: ${{ inputs.registry-username }}
           password: ${{ secrets.registry-password }}
 
       - name: Setup QEMU
@@ -164,7 +164,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ inputs.registry }}
-          username: ${{ inputs.dockerhub-username }}
+          username: ${{ inputs.registry-username }}
           password: ${{ secrets.registry-password }}
 
       - name: Setup Docker Buildx
