--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,21 +5,12 @@ on:
     types: [opened, synchronize, reopened]
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.job }}
   cancel-in-progress: true
 
 permissions:
   contents: read
   packages: write
-
-env:
-  # REGISTRY_IMAGE: ghcr.io/${{ github.repository }}
-  REGISTRY_IMAGE: ''
-  BAKE_TARGET: build
-  DOCKERHUB_USERNAME: ${{ github.actor }}
-  RUNNER_ARM64: ubuntu-22.04-arm
-  RUNNER_DEFAULT: ubuntu-22.04
-  REGISTRY: ghcr.io
 
 jobs:
   pr-build:
