--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -50,35 +50,12 @@ jobs:
     outputs:
       matrix: ${{ steps.platforms.outputs.matrix }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Create matrix
-        id: platforms
-        run: |
-          echo "matrix=$(docker buildx bake ${{ inputs.bake-target }} \
-            --print | jq -cr '.target | to_entries | map(.value.platforms[]) | unique')" \
-            >> $GITHUB_OUTPUT
-
-      - name: Show matrix
-        run: echo ${{ steps.platforms.outputs.matrix }}
-
-      - name: Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
+      - name: Prepare matrix & metadata
+        id: prepare
+        uses: ./.github/actions/buildx-bake/prepare
         with:
-          images: ${{ inputs.registry-image }}
-
-      - name: Rename meta file
-        run: mv "${{ steps.meta.outputs.bake-file }}" "${{ runner.temp }}/bake-meta.json"
-
-      - name: Upload meta bake file
-        uses: actions/upload-artifact@v4
-        with:
-          name: bake-meta
-          path: ${{ runner.temp }}/bake-meta.json
-          if-no-files-found: error
-          retention-days: 1
+          bake-target: ${{ inputs.bake-target }}
+          registry-image: ${{ inputs.registry-image }}
 
   build:
     needs: prepare
