--- a/.github/actions/buildx-bake/prepare/action.yml
+++ b/.github/actions/buildx-bake/prepare/action.yml
@@ -26,6 +26,7 @@ runs:
           >> $GITHUB_OUTPUT
 
     - name: Show matrix
+      shell: bash
       run: echo ${{ steps.platforms.outputs.matrix }}
 
     - name: Docker metadata
