--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -67,61 +67,16 @@ jobs:
     needs: prepare
     runs-on: ${{ matrix.platform == 'linux/arm64' && inputs.runner-arm64 || inputs.runner-default }}
     strategy:
-      fail-fast: false
       matrix:
         platform: ${{ fromJson(needs.prepare.outputs.matrix) }}
     steps:
-      - name: Prepare env
-        run: |
-          platform=${{ matrix.platform }}
-          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
-
-      - name: Download meta bake file
-        uses: actions/download-artifact@v4
+      - uses: ./.github/actions/build
         with:
-          name: bake-meta
-          path: ${{ runner.temp }}
-
-      - name: Login to registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ inputs.registry }}
-          username: ${{ inputs.registry-username }}
-          password: ${{ secrets.registry-password }}
-
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build & push images
-        id: bake
-        uses: docker/bake-action@v6
-        env:
-          NO_TAG: true
-        with:
-          files: |
-            ./docker-bake.hcl
-            cwd://${{ runner.temp }}/bake-meta.json
-          targets: ${{ inputs.bake-target }}
-          set: |
-            ${{ inputs.registry-image != '' && format('*.tags={0}', inputs.registry-image) || '' }}
-            *.platform=${{ matrix.platform }}
-            *.output=type=image,push-by-digest=true,name-canonical=true,push=true
-
-      - name: Export container digests
-        run: |
-          mkdir -p ${{ runner.temp }}/digests
-          echo '${{ steps.bake.outputs.metadata }}' | jq 'with_entries(select(.value["containerimage.digest"]?) | .value |= {name: .["image.name"], digests:[.["containerimage.digest"]]})' > ${{ runner.temp }}/digests/${{ env.PLATFORM_PAIR }}.json
-
-      - name: Upload digest
-        uses: actions/upload-artifact@v4
-        with:
-          name: digests-${{ env.PLATFORM_PAIR }}
-          path: ${{ runner.temp }}/digests/*
-          if-no-files-found: error
-          retention-days: 1
+          bake-target: ${{ inputs.bake-target }}
+          registry-image: ${{ inputs.registry }}
+          registry-username: ${{ inputs.registry-username }}
+        secrets:
+          registry-password: ${{ secrets.registry-password }}
 
   merge:
     needs: build
