--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -72,7 +72,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/build
+        with:
+          fetch-depth: 0
+          fetch-tags: true
+
+      - uses: ./.github/actions/buildx-bake/build
         with:
           bake-target: ${{ inputs.bake-target }}
           registry: ${{ inputs.registry }}
@@ -84,56 +88,13 @@ jobs:
     needs: build
     runs-on: ${{ inputs.runner-default }}
     steps:
-      - name: Download meta bake file
-        uses: actions/download-artifact@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          name: bake-meta
-          path: ${{ runner.temp }}
+          fetch-depth: 0
+          fetch-tags: true
 
-      - name: Download all digests
-        uses: actions/download-artifact@v4
+      - uses: ./.github/actions/buildx-bake/merge
         with:
-          path: ${{ runner.temp }}/digests
-          pattern: digests-*
-          merge-multiple: true
-
-      - name: Login to registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ inputs.registry }}
-          username: ${{ inputs.registry-username }}
-          password: ${{ secrets.registry-password }}
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Create manifest lists & push
-        working-directory: ${{ runner.temp }}/digests
-        run: |
-          JSON_FILE=${{ runner.temp }}/digests/all.json
-          jq -s '
-            reduce .[] as $doc ({};
-              reduce ($doc|to_entries[]) as $kv (
-                .;
-                .[$kv.key].name    = $kv.value.name
-                | .[$kv.key].digests = ((.[$kv.key].digests // []) + $kv.value.digests)
-              )
-            )
-          ' ${{ runner.temp }}/digests/*.json > ${JSON_FILE}
-          for key in $(jq -r 'keys[]' "$JSON_FILE"); do
-            image_name=$(jq -r ".\"$key\".name" "$JSON_FILE")
-            image_digests=$(jq -r ".\"$key\".digests[]" "$JSON_FILE" | while read -r digest; do echo "${image_name}@${digest} "; done)
-            image_tags=$(jq -cr '(.target."docker-metadata-action".tags // [] ) | map("-t '${image_name}':" + sub(".*:"; "")) | join(" ")' ${{ runner.temp }}/bake-meta.json)
-            docker buildx imagetools create \
-              ${image_tags} \
-              ${image_digests}
-          done
-
-      - name: Inspect published images
-        working-directory: ${{ runner.temp }}/digests
-        run: |
-          JSON_FILE=${{ runner.temp }}/digests/all.json
-          for key in $(jq -r 'keys[]' "$JSON_FILE"); do
-            image_name=$(jq -r ".\"$key\".name" "$JSON_FILE")
-            docker buildx imagetools inspect ${image_name}:$(jq -r '.target."docker-metadata-action".args.DOCKER_META_VERSION' ${{ runner.temp }}/bake-meta.json)
-          done
+          registry-username: ${{ inputs.registry-username }}
+          registry-password: ${{ secrets.registry-password }}
