--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -70,7 +70,7 @@ jobs:
     runs-on: ${{ matrix.platform == 'linux/arm64' && inputs.runner-arm64 || inputs.runner-default }}
     strategy:
       matrix:
-        platform: ${{ fromJson(needs.prepare.outputs.matrix) }}
+        platform: ${{ fromJson(needs.iamge-prepare.outputs.matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -88,7 +88,7 @@ jobs:
 
   image-merge:
     name: Merge Image Digests Into Manifest
-    needs: build
+    needs: image-build
     runs-on: ${{ inputs.runner-default }}
     steps:
       - name: Checkout
